# example-ca

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
app/: xxx.py
app/entities/: __init__.py  config.py  consts.py  errors.py  interfaces.py  models.py
app/repos/: __init__.py
app/repos/django/: __init__.py  author.py  book.py
app/repos/local/: author.py  book.py
app/repos/sqlalchemy/: __init__.py  author.py  book.py  tables.py
app/usecases/: author.py  book.py
app_api_v1/: apps.py  models.py  urls.py  viewsets.py
app_api_v1/migrations/: 0001_initial.py  0002_alter_author_options.py
app_api_v2/: apps.py  urls.py  viewsets.py
app_api_v3/: apps.py  models.py  urls.py  viewsets.py
app_api_v3/migrations/: 0001_initial.py  0002_alter_book_options.py  0003_alter_book_title.py
app_main/: urls.py
app_main/templates/main/: index.html
clientlib/: client.py  entities.py  errors.py
project/: settings.py  urls.py
tests/: conftest.py
tests/app/: conftest.py  test_usecases.py
tests/app/usecases/: conftest.py
tests/app/usecases/create_author/: conftest.py  test_create_author.py  test_usecase.py
tests/app/usecases/create_book/: conftest.py  test_create_book.py  test_usecase.py
tests/app/usecases/delete_author/: conftest.py  test_delete_author.py  test_usecase.py
tests/app/usecases/delete_book/: conftest.py  test_delete_book.py  test_usecase.py
tests/app/usecases/find_authors/: conftest.py  test_find_authors.py  test_usecase.py
tests/app/usecases/find_books/: conftest.py  test_find_books.py  test_usecase.py
tests/app/usecases/get_all_authors/: conftest.py  test_usecase.py
tests/app/usecases/update_author/: conftest.py  test_update_author.py  test_usecase.py
tests/app/usecases/update_book/: conftest.py  test_update_book.py  test_usecase.py
tests/e2e/: conftest.py
tests/e2e/api/: conftest.py  test_authors.py
tests/e2e/api/v1/: conftest.py  test_authors.py
tests/e2e/api/v2/: conftest.py  test_authors.py
tests/e2e/api/v3/: conftest.py  test_books.py
tests/e2e/html_pages/: conftest.py  test_main_page.py
